使用JPA 建立持久層及其測試方法

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/test_project?useUnicode=true&c
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA 設定
+spring.jpa.hibernate.ddl-auto=update
+# 顯示SQL 語句
+spring.jpa.show-sql=true 
