新增日誌紀錄及其配置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,18 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.web.resources.static-locations=classpath:/static/ 
+
+# 指定Log 檔案位置，不指定路徑則預設在當前專案下生成檔案
+logging.file.path=/home/kaijun/Documents/springbootdemo
+
+# 設定Log 檔案名稱，預設為spring.log，使用該配置會覆蓋path 位置，直接在當前專案下生成檔案
+logging.file.name=LogFile.log
+
+#  在控制檯輸出的日誌的格式
+logging.pattern.console=%d{yyyy-MM-dd} [%thread] %-5level %logger{50} - %msg%n
+
+# 指定檔案中日誌輸出的格式
+logging.pattern.file=%d{yyyy-MM-dd} === [%thread] === %-5level === %logger{50} ==== %msg%n
+
+# 指定自定義 logger 物件日誌級別
+logging.level.com.codewhite=trace
